--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1291,31 +1291,13 @@
     "comment": "home page latest content section title",
     "string": "Latest Content"
   },
-  "homePage__newsletterEmail": {
-    "string": "Email Address"
-  },
-  "homePage__newsletterEmailPlaceholder": {
-    "string": "josephbates@email.com"
-  },
-  "homePage__newsletterHatTitle": {
-    "string": "Sign up for our Newsletter"
-  },
-  "homePage__newsletterName": {
-    "string": "Name"
-  },
-  "homePage__newsletterNamePlaceholder": {
-    "string": "Joseph Bates"
-  },
   "homePage__newsletterSectionText": {
     "comment": "home page newsletter section text",
-    "string": "Want to hear when we’re releasing new features, going to conferences, or releasing new AudioVerse Swag? Subscribe to our newsletter to get updates."
+    "string": "Want to hear when we’re releasing new features, going to conferences, or releasing new AudioVerse Gift? Subscribe to our newsletter to get updates."
   },
   "homePage__newsletterSectionTitle": {
     "comment": "home page newsletter section title",
     "string": "Subscribe to Updates"
-  },
-  "homePage__newsletterSubscribe": {
-    "string": "Subscribe"
   },
   "homePage__recentPostsSectionText": {
     "comment": "home page recent posts section text",
@@ -1822,6 +1804,30 @@
   },
   "navigation__nameFallback": {
     "string": "User Account"
+  },
+  "newsLetterForm__checkboxNewsletter": {
+    "string": "Newsletter typically about once a month"
+  },
+  "newsLetterForm__checkboxWeeklyPics": {
+    "string": "Weekly Picks goes out every Monday"
+  },
+  "newsLetterForm__newsletterEmail": {
+    "string": "Email Address"
+  },
+  "newsLetterForm__newsletterEmailPlaceholder": {
+    "string": "josephbates@email.com"
+  },
+  "newsLetterForm__newsletterHatTitle": {
+    "string": "Sign up for our Emails"
+  },
+  "newsLetterForm__newsletterName": {
+    "string": "Name"
+  },
+  "newsLetterForm__newsletterNamePlaceholder": {
+    "string": "Joseph Bates"
+  },
+  "newsLetterForm__newsletterSubscribe": {
+    "string": "Subscribe"
   },
   "notFound__header": {
     "string": "Sorry!"
