Reverted back from Gift to Swag
changed GIFT into SWAG on Form description

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1293,7 +1293,7 @@
   },
   "homePage__newsletterSectionText": {
     "comment": "home page newsletter section text",
-    "string": "Want to hear when we’re releasing new features, going to conferences, or releasing new AudioVerse Gift? Subscribe to our newsletter to get updates."
+    "string": "Want to hear when we’re releasing new features, going to conferences, or releasing new AudioVerse Swag? Subscribe to our newsletter to get updates."
   },
   "homePage__newsletterSectionTitle": {
     "comment": "home page newsletter section title",
