--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -1156,21 +1156,6 @@
     "comment": "página inicial último título da seção de conteúdo",
     "string": "Conteúdo mais recente"
   },
-  "homePage__newsletterEmail": {
-    "string": "Endereço de e-mail"
-  },
-  "homePage__newsletterEmailPlaceholder": {
-    "string": "josephbates@email.com"
-  },
-  "homePage__newsletterHatTitle": {
-    "string": "Assine nosso boletim informativo"
-  },
-  "homePage__newsletterName": {
-    "string": "Nome"
-  },
-  "homePage__newsletterNamePlaceholder": {
-    "string": "Joseph Bates"
-  },
   "homePage__newsletterSectionText": {
     "comment": "página inicial texto da seção newsletter",
     "string": "Quer saber quando lançamos novos recursos, Vamos aos congressos, ou lançamos um novo AudioVerse Swag? Assine nossa newsletter para receber atualizações"
@@ -1178,9 +1163,6 @@
   "homePage__newsletterSectionTitle": {
     "comment": "página inicial título da seção newsletter",
     "string": "Inscreva-se para atualizações"
-  },
-  "homePage__newsletterSubscribe": {
-    "string": " Se inscrever"
   },
   "homePage__recentPostsSectionText": {
     "comment": "página inicial texto da seção posts recentes",
@@ -2724,5 +2706,29 @@
   },
   "topicListPage__title": {
     "string": "All Topics"
+  },
+  "newsLetterForm__checkboxNewsletter": {
+    "string": "Newsletter (typically about once a month)"
+  },
+  "newsLetterForm__checkboxWeeklyPics": {
+    "string": "Weekly Picks (goes out every Monday)"
+  },
+  "newsLetterForm__newsletterEmail": {
+    "string": "Email Address"
+  },
+  "newsLetterForm__newsletterEmailPlaceholder": {
+    "string": "josephbates@email.com"
+  },
+  "newsLetterForm__newsletterHatTitle": {
+    "string": "Sign up for our Emails"
+  },
+  "newsLetterForm__newsletterName": {
+    "string": "Name"
+  },
+  "newsLetterForm__newsletterNamePlaceholder": {
+    "string": "Joseph Bates"
+  },
+  "newsLetterForm__newsletterSubscribe": {
+    "string": "Subscribe"
   }
 }
