--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -1352,24 +1352,6 @@
   "header__navItemStory-blog": {
     "string": "博客"
   },
-  "homePage__newsletterEmail": {
-    "string": "邮件地址"
-  },
-  "homePage__newsletterEmailPlaceholder": {
-    "string": "josephbates@email.com"
-  },
-  "homePage__newsletterHatTitle": {
-    "string": "订阅我们的时事通讯"
-  },
-  "homePage__newsletterName": {
-    "string": "姓名"
-  },
-  "homePage__newsletterNamePlaceholder": {
-    "string": "贝约瑟"
-  },
-  "homePage__newsletterSubscribe": {
-    "string": "订阅"
-  },
   "homePage__tagline": {
     "string": "纯正教义"
   },
@@ -2724,5 +2706,29 @@
   },
   "trending__title": {
     "string": "Trending Teachings"
+  },
+  "newsLetterForm__checkboxNewsletter": {
+    "string": "Newsletter (typically about once a month)"
+  },
+  "newsLetterForm__checkboxWeeklyPics": {
+    "string": "Weekly Picks (goes out every Monday)"
+  },
+  "newsLetterForm__newsletterEmail": {
+    "string": "Email Address"
+  },
+  "newsLetterForm__newsletterEmailPlaceholder": {
+    "string": "josephbates@email.com"
+  },
+  "newsLetterForm__newsletterHatTitle": {
+    "string": "Sign up for our Emails"
+  },
+  "newsLetterForm__newsletterName": {
+    "string": "Name"
+  },
+  "newsLetterForm__newsletterNamePlaceholder": {
+    "string": "Joseph Bates"
+  },
+  "newsLetterForm__newsletterSubscribe": {
+    "string": "Subscribe"
   }
 }
